# StatGetter-V2

./: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml
bot/: Dockerfile  docker-compose.yml  pyproject.toml  test.sh
bot/src/: app.py  db_test.py  fetch.py  logger.py
bot_logic/: pyproject.toml
bot_logic/src/: __main__.py  app.py  fetch.py  setup_logger.py
program/:  logging.py  db_test.py  main.py
